--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-paper": "^4.7.2",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
